--- a/exerciciosComplementares/01/site/index.html
+++ b/exerciciosComplementares/01/site/index.html
@@ -1,24 +1,27 @@
   <html lang="pt-br">
   <head>
-   <meta charset="utf-8">
-   <link href="css/estilos.css" rel="stylesheet" type="text/css">
-   <title>Home</title>
+    <meta charset="utf-8">
+    <link href="css/estilos.css" rel="stylesheet" type="text/css">
+    <title>Home</title>
 
-  <style>
+    <style>
 
-  </style>
+    </style>
 
   </head>
 
   <body>
+    
 
-    <div>
-      <img class=”imagemPrincipal” src=”D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto01.png”>
+    <img class="fotos" src="imagens/foto01.png">
+    <div class="fotoPrincipal">
+      Oii, meu nome é Aline Vieira,
+      tenho 21 anos e aqui consta um pouquinho sobre mim.
     </div>
 
-</div class="icones">
-<a href="sobre.html"><img class="iconeSobre" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/woman-icon.png"></a>
-<a href="contato.html"><img class="iconeContato" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/contact-icon.png"></a>
-</div>
+  </div class="icones">
+  <a href="sobre.html"><img class="iconeSobre" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/woman-icon.png"></a>
+  <a href="contato.html"><img class="iconeContato" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/contact-icon.png"></a>
+  </div>
   </body>
   </html>
