--- a/exerciciosComplementares/01/site/sobre.html
+++ b/exerciciosComplementares/01/site/sobre.html
@@ -1,15 +1,20 @@
 <html lang="pt-br">
 <head>
- <meta charset="utf-8">
-<style>
-
-</style>
-
-  <title>Sobre</title>
-
+  <meta charset="utf-8">
+  <link href="css/estilos.css" rel="stylesheet" type="text/css">
+  <title>Home</title>
 </head>
 
 <body>
+
+<img class="textoSobre" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/textoSobre.png">
+
+<a href="index.html"><img class="iconeVoltar" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/arrow-icon.png"></a>
+
+<div class="icones">
+<a target="_blank" href="sobre.html"><img class="iconeSobre" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/woman-icon.png"></a>
+<a target="_blank" href="contato.html"><img class="iconeContato" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/contact-icon.png"></a>
+</div>
 
 </body>
 </html>
