Pagina Contato e adição de imagens em sobre

--- a/exerciciosComplementares/01/site/contato.html
+++ b/exerciciosComplementares/01/site/contato.html
@@ -1,15 +1,34 @@
 <html lang="pt-br">
 <head>
  <meta charset="utf-8">
-<style>
-
-</style>
-
+ <link href="css/estilos.css" rel="stylesheet" type="text/css">
   <title>Contato</title>
-
 </head>
 
 <body>
+
+  <a href="index.html"><img class="iconeVoltar" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/arrow-icon.png"></a>
+
+  <div class="icones">
+  <a target="_blank" href="sobre.html"><img class="iconeSobre" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/woman-icon.png"></a>
+  <a target="_blank" href="contato.html"><img class="iconeContato" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/contact-icon.png"></a>
+  </div>
+
+  <div class="formulario">
+  <form autocomplete="off">
+  <label class="nomeFormulario">Nome</label>     <input class="campoNome" type="text">
+
+
+  <label class="emailFormulario">Email</label>   <input class="campoEmail" type="text">
+
+
+  <label class="mensagemFormulario">Mensagem</label>
+
+  <textarea class="campoMensagem" cols="35" rows="8"></textarea>
+  
+  <input class="btnSubmit" type="submit" value="Enviar">
+  </form>
+  </div>
 
 </body>
 </html>
