--- a/exerciciosComplementares/01/site/sobre.html
+++ b/exerciciosComplementares/01/site/sobre.html
@@ -16,5 +16,19 @@
 <a target="_blank" href="contato.html"><img class="iconeContato" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/contact-icon.png"></a>
 </div>
 
+<div class="fotos">
+<img class="foto02" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto02.jpg">
+<img class="foto03" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto03.png">
+<img class="foto04" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto04.jpg">
+<img class="foto05" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto05.jpg">
+<img class="foto06" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto06.jpg">
+<img class="foto07" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto07.jpg">
+<img class="foto08" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto08.jpg">
+<img class="foto09" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto09.jpg">
+<img class="foto10" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto10.jpeg">
+<img class="foto11" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto11.jpg">
+<img class="foto12" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto12.jpg">
+</div>
+
 </body>
 </html>
