Ajustando tela contato

--- a/exerciciosComplementares/01/site/sobre.html
+++ b/exerciciosComplementares/01/site/sobre.html
@@ -2,33 +2,33 @@
 <head>
   <meta charset="utf-8">
   <link href="css/estilos.css" rel="stylesheet" type="text/css">
-  <title>Home</title>
+  <title>Sobre</title>
 </head>
 
 <body>
 
-<img class="textoSobre" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/textoSobre.png">
+  <img class="textoSobre" src="imagens/textoSobre.png">
 
-<a href="index.html"><img class="iconeVoltar" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/arrow-icon.png"></a>
+  <a href="index.html"><img class="iconeVoltar" src="imagens/arrow-icon.png"></a>
 
-<div class="icones">
-<a target="_blank" href="sobre.html"><img class="iconeSobre" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/woman-icon.png"></a>
-<a target="_blank" href="contato.html"><img class="iconeContato" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/contact-icon.png"></a>
-</div>
+  <div class="icones">
+    <a target="_blank" href="sobre.html"><img class="iconeSobre" src="imagens/woman-icon.png"></a>
+    <a target="_blank" href="contato.html"><img class="iconeContato" src="imagens/contact-icon.png"></a>
+  </div>
 
-<div class="fotos">
-<img class="foto02" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto02.jpg">
-<img class="foto03" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto03.png">
-<img class="foto04" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto04.jpg">
-<img class="foto05" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto05.jpg">
-<img class="foto06" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto06.jpg">
-<img class="foto07" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto07.jpg">
-<img class="foto08" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto08.jpg">
-<img class="foto09" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto09.jpg">
-<img class="foto10" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto10.jpeg">
-<img class="foto11" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto11.jpg">
-<img class="foto12" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/foto12.jpg">
-</div>
+  <div class="fotos">
+    <img class="foto02" src="imagens/foto02.jpg">
+    <img class="foto03" src="imagens/foto03.png">
+    <img class="foto04" src="imagens/foto04.jpg">
+    <img class="foto05" src="imagens/foto05.jpg">
+    <img class="foto06" src="imagens/foto06.jpg">
+    <img class="foto07" src="imagens/foto07.jpg">
+    <img class="foto08" src="imagens/foto08.jpg">
+    <img class="foto09" src="imagens/foto09.jpg">
+    <img class="foto10" src="imagens/foto10.jpeg">
+    <img class="foto11" src="imagens/foto11.jpg">
+    <img class="foto12" src="imagens/foto12.jpg">
+  </div>
 
 </body>
 </html>
