--- a/exerciciosComplementares/01/site/contato.html
+++ b/exerciciosComplementares/01/site/contato.html
@@ -1,33 +1,46 @@
 <html lang="pt-br">
 <head>
  <meta charset="utf-8">
- <link href="css/estilos.css" rel="stylesheet" type="text/css">
+ <link href="css/contato.css" rel="stylesheet" type="text/css">
+ <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
   <title>Contato</title>
 </head>
 
 <body>
+  <div class="enfeite">
+      <img src="imagens/cat.gif" alt="">
+  </div>
 
-  <a href="index.html"><img class="iconeVoltar" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/arrow-icon.png"></a>
+  <a href="index.html"><img class="iconeVoltar" src="imagens/arrow-icon.png"></a>
 
   <div class="icones">
-  <a target="_blank" href="sobre.html"><img class="iconeSobre" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/woman-icon.png"></a>
-  <a target="_blank" href="contato.html"><img class="iconeContato" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/contact-icon.png"></a>
+    <a target="_blank" href="sobre.html"><img class="iconeSobre" src="imagens/woman-icon.png"></a>
+    <a target="_blank" href="contato.html"><img class="iconeContato" src="imagens/contact-icon.png"></a>
   </div>
 
   <div class="formulario">
-  <form autocomplete="off">
-  <label class="nomeFormulario">Nome</label>     <input class="campoNome" type="text">
+    <form>
+
+      <div class="">
+        <label for="campoNome" class="nomeFormulario">Nome</label>
+        <input id="campoNome" type="text" placeholder="Digite seu Nome...">
+      </div>
+
+      <div class="">
+        <label for="campoEmail" class="emailFormulario">E-mail</label>
+        <input id="campoEmail" type="text" placeholder="Digite seu E-mail...">
+      </div>
+
+      <div class="">
+        <label for="campoMensagem" class="mensagemFormulario">Mensagem</label>
+        <textarea id="campoMensagem" cols="35" rows="8" placeholder="Digite sua Mensagem..."></textarea>
+      </div>
 
 
-  <label class="emailFormulario">Email</label>   <input class="campoEmail" type="text">
 
+      <input class="btnSubmit" type="submit" value="Enviar">
 
-  <label class="mensagemFormulario">Mensagem</label>
-
-  <textarea class="campoMensagem" cols="35" rows="8"></textarea>
-  
-  <input class="btnSubmit" type="submit" value="Enviar">
-  </form>
+    </form>
   </div>
 
 </body>
