--- a/exerciciosComplementares/01/site/index.html
+++ b/exerciciosComplementares/01/site/index.html
@@ -7,26 +7,26 @@
 
   <body>
 
-  <img class="fotoPrincipal" src="imagens/foto01.png">
+  <img class="fotoPrincipal" src="imagens/fotoa.png">
 
-  <div class="icones">
-  <a target="_blank" href="sobre.html"><img class="iconeSobre" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/woman-icon.png"></a>
-  <a target="_blank" href="contato.html"><img class="iconeContato" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/contact-icon.png"></a>
-  </div>
 
-  <div class="imagens">
-    <a target="_blank" href="https://open.spotify.com/user/onalinevieira"><img class="spotify" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/spotify.png"></a>
-    <a target="_blank" href="https://www.instagram.com/misaokumura_in/"><img class="instagram" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/instagram.png"></a>
-    <a target="_blank" href="https://br.linkedin.com/in/onalinevieira"><img class="linkedin" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/linkedin.png"></a>
-    <a target="_blank" href="https://github.com/misaokumura"><img class="github" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/github.png"></a>
-  </div>
+    <a target="_blank" href="sobre.html"><img class="iconeSobre" src="imagens/woman-icon.png"></a>
+    <a target="_blank" href="contato.html"><img class="iconeContato" src="imagens/contact-icon.png"></a>
+
+
+
+    <a target="_blank" href="https://open.spotify.com/user/onalinevieira"><img class="spotify" src="imagens/spotify.png"></a>
+    <a target="_blank" href="https://www.instagram.com/misaokumura_in/"><img class="instagram" src="imagens/instagram.png"></a>
+    <a target="_blank" href="https://br.linkedin.com/in/onalinevieira"><img class="linkedin" src="imagens/linkedin.png"></a>
+    <a target="_blank" href="https://github.com/misaokumura"><img class="github" src="imagens/github.png"></a>
+
 
 <div>
-<img class="textoFotoPrincipal" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/textoFotoPrincipal.png"></a>
-<a target="_blank" href="https://open.spotify.com/user/onalinevieira"><img class="textoSpotify" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/textoSpotify.png"></a>
-<a target="_blank" href="https://www.instagram.com/misaokumura_in/"><img class="textoInstagram" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/textoInstagram.png"></a>
-<a target="_blank" href="https://br.linkedin.com/in/onalinevieira"><img class="textoLinkedin" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/textoLinkedin.png"></a>
-<a target="_blank" href="https://github.com/misaokumura"><img class="textoGithub" src="D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/textoGithub.png"></a>
+<img class="textoFotoPrincipal" src="imagens/textoFotoPrincipal.png"></a>
+<a target="_blank" href="https://open.spotify.com/user/onalinevieira"><img class="textoSpotify" src="imagens/textoSpotify.png"></a>
+<a target="_blank" href="https://www.instagram.com/misaokumura_in/"><img class="textoInstagram" src="imagens/textoInstagram.png"></a>
+<a target="_blank" href="https://br.linkedin.com/in/onalinevieira"><img class="textoLinkedin" src="imagens/textoLinkedin.png"></a>
+<a target="_blank" href="https://github.com/misaokumura"><img class="textoGithub" src="imagens/textoGithub.png"></a>
 
   </body>
   </html>
