--- a/exerciciosComplementares/01/site/contato.html
+++ b/exerciciosComplementares/01/site/contato.html
@@ -1,13 +1,13 @@
 <html lang="pt-br">
 <head>
  <meta charset="utf-8">
- <link href="css/contato.css" rel="stylesheet" type="text/css">
+ <link href="css/estilos.css" rel="stylesheet" type="text/css">
  <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
   <title>Contato</title>
 </head>
 
 <body>
-  <div class="enfeite">
+  <div class="gif">
       <img src="imagens/cat.gif" alt="">
   </div>
 
@@ -22,23 +22,23 @@
     <form>
 
       <div class="">
-        <label for="campoNome" class="nomeFormulario">Nome</label>
-        <input id="campoNome" type="text" placeholder="Digite seu Nome...">
+        <label for="campoNome" class="nomeFormulario">nome</label>
+        <input id="campoNome" type="text" placeholder="digite seu nome...">
       </div>
 
       <div class="">
-        <label for="campoEmail" class="emailFormulario">E-mail</label>
-        <input id="campoEmail" type="text" placeholder="Digite seu E-mail...">
+        <label for="campoEmail" class="emailFormulario">e-mail</label>
+        <input id="campoEmail" type="text" placeholder="digite seu e-mail...">
       </div>
 
       <div class="">
-        <label for="campoMensagem" class="mensagemFormulario">Mensagem</label>
-        <textarea id="campoMensagem" cols="35" rows="8" placeholder="Digite sua Mensagem..."></textarea>
+        <label for="campoMensagem" class="mensagemFormulario">mensagem</label>
+        <textarea id="campoMensagem" cols="35" rows="8" placeholder="digite sua mensagem..."></textarea>
       </div>
 
 
 
-      <input class="btnSubmit" type="submit" value="Enviar">
+      <input class="btnSubmit" type="submit" value="enviar">
 
     </form>
   </div>
