Deletando arquivos não ultilizados, nomenclatura de pastas, adicionando tasks

--- a/exerciciosComplementares/Um/site/index.html
+++ b/exerciciosComplementares/Um/site/index.html
@@ -7,7 +7,7 @@
 
   <body>
 
-  <img class="fotoPrincipal" src="imagens/fotoa.png">
+  <img class="fotoPrincipal" src="imagens/foto01.png">
 
 
     <a target="_blank" href="sobre.html"><img class="iconeSobre" src="imagens/woman-icon.png"></a>
