Dividindo CSS por paginas

--- a/exerciciosComplementares/Um/site/contato.html
+++ b/exerciciosComplementares/Um/site/contato.html
@@ -1,26 +1,25 @@
 <html lang="pt-br">
 <head>
  <meta charset="utf-8">
- <link href="css/estilos.css" rel="stylesheet" type="text/css">
- <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+ <link href="css/contato.css" rel="stylesheet" type="text/css">
+ <link href="css/padrao.css" rel="stylesheet" type="text/css">
   <title>Contato</title>
 </head>
 
 <body>
   <div class="gif">
-      <img src="imagens/cat.gif" alt="">
+      <img src="imagens/cat.gif">
   </div>
 
-  <a href="index.html"><img class="iconeVoltar" src="imagens/arrow-icon.png"></a>
-
   <div class="icones">
+    <a href="index.html"><img class="iconeVoltar" src="imagens/arrow-icon.png"></a>
     <a target="_blank" href="sobre.html"><img class="iconeSobre" src="imagens/woman-icon.png"></a>
     <a target="_blank" href="contato.html"><img class="iconeContato" src="imagens/contact-icon.png"></a>
   </div>
 
   <div class="formulario">
-    <form>
 
+    <form>
       <div class="">
         <label for="campoNome" class="nomeFormulario">nome</label>
         <input id="campoNome" type="text" placeholder="digite seu nome...">
@@ -36,11 +35,9 @@
         <textarea id="campoMensagem" cols="35" rows="8" placeholder="digite sua mensagem..."></textarea>
       </div>
 
-
-
       <input class="btnSubmit" type="submit" value="enviar">
-
     </form>
+
   </div>
 
 </body>
