--- a/exerciciosComplementares/Um/site/sobre.html
+++ b/exerciciosComplementares/Um/site/sobre.html
@@ -1,7 +1,8 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8">
-  <link href="css/estilos.css" rel="stylesheet" type="text/css">
+  <link href="css/sobre.css" rel="stylesheet" type="text/css">
+    <link href="css/padrao.css" rel="stylesheet" type="text/css">
   <title>Sobre</title>
 </head>
 
@@ -9,9 +10,8 @@
 
   <img class="textoSobre" src="imagens/textoSobre.png">
 
-  <a href="index.html"><img class="iconeVoltar" src="imagens/arrow-icon.png"></a>
-
   <div class="icones">
+      <a href="index.html"><img class="iconeVoltar" src="imagens/arrow-icon.png"></a>
     <a target="_blank" href="sobre.html"><img class="iconeSobre" src="imagens/woman-icon.png"></a>
     <a target="_blank" href="contato.html"><img class="iconeContato" src="imagens/contact-icon.png"></a>
   </div>
