Dividindo exercicios por comentarios

--- a/aulaDois/index.html
+++ b/aulaDois/index.html
@@ -6,15 +6,21 @@
 </head>
 <body>
   <script>
-  /*
+
+  /* Exercicio 01
     alert('Hello World!');
+  */
+
+  /*Exercicio 02
     var nome = "Aline Maria Vieira da Silva";
     var idade = 21;
     var sexoFeminino = true;
     var peso = 56.600;
     console.log(nome, idade, sexoFeminino, peso);
     alert(" Olá, seu nome é " + nome + " você tem " + idade + " anos! ");
+  */
 
+/* Exercicio 03
     if (idade <= 18) {
     alert('Novinho');
   }
@@ -24,7 +30,9 @@
     else {
       alert('Tiozão(ona)')
     }
+*/
 
+/* Exercicio 04
     var dia;
   switch (new Date().getDay()) {
       case 0:
@@ -50,7 +58,9 @@
           break;
   }
   alert(" Salve Tiozão, hoje é " + dia + ", Dia de?");
+  */
 
+/* Exercicio 05
   function converteNumero(numero) {
   switch (numero) {
     case 1 :
@@ -91,12 +101,15 @@
 
 var scanner = parseInt (prompt ("Digite um número de 1 a 10 " ));
 converteNumero (scanner);
+*/
 
+/* Exercicio 06
 for ( var i = 1; i < 10; i++) {
         converteNumero(i);
 }
+*/
 
-
+/* Exercicio 07
 var dadosPessoaisAline = ["Aline", ["Avenida Colombo", "5790", "Centro", "Maringa"], "(44) 99999-9999"];
 console.log(dadosPessoaisAline);
 dadosPessoaisAline[0] = "Aline Maria Vieira da Silva";
@@ -105,6 +118,7 @@ dadosPessoaisAline.splice(2, 1);
 console.log(dadosPessoaisAline);
 */
 
+/* Exercicio 08 */
 var dadosPessoais = {
   nome: "Aline",
   sobrenome: "Vieira",
