--- a/exercicios-complementares/aula-02/exercicio-05.html
+++ b/exercicios-complementares/aula-02/exercicio-05.html
@@ -16,8 +16,8 @@ A temperatura deve ser inputada pelo usuário, via prompt.
     return (fahrenhreit - 32) / 1.8;
   }
 
-  var scanner = prompt("Digite a temperatura em Fahrenheit: ");
-  var temperaturaEmCelsius = temperatureConverter(scanner);
+  var fahrenheit = prompt("Digite a temperatura em Fahrenheit: ");
+  var temperaturaEmCelsius = temperatureConverter(fahrenheit);
   alert(temperaturaEmCelsius);
 </script>
 
