--- a/exercicios-complementares/aula-02/exercicio-06.html
+++ b/exercicios-complementares/aula-02/exercicio-06.html
@@ -7,7 +7,24 @@
 
 <body>
 <p>
-6. Escreva uma função para calcular e alertar o número de lâmpadas necessárias para iluminar um determinado cômodo de uma residência. Dados de entrada: a potência da lâmpada utilizada (em watts), as dimensões (largura e comprimento, em metros) do cômodo. Considere que a potência necessária é de 18 watts por metro quadrado. As entradas devem ser inputadas via prompt e nãp devem aceitar valores não numéricos.
+6. Escreva uma função para calcular e alertar o número de lâmpadas necessárias para iluminar um determinado cômodo de uma residência.
+Dados de entrada: a potência da lâmpada utilizada (em watts), as dimensões (largura e comprimento, em metros) do cômodo.
+Considere que a potência necessária é de 18 watts por metro quadrado.
+As entradas devem ser inputadas via prompt e nãp devem aceitar valores não numéricos.
 </p>
+
+<script>
+var potLamp = prompt("Digite a potência da lâmpada em Watts: ");
+var largComodo = prompt("Digite a largura do comodo em metros: ");
+var compComodo = prompt("Digite o comprimento do comodo em metros: ");
+var resultado = calcularQuantLamp(potLamp, largComodo, compComodo);
+alert(resultado);
+
+function calcularQuantLamp(potLamp, largComodo, compComodo) {
+  var areaComodo = largComodo * compComodo;
+  var potNecessaria = areaComodo * 18;
+  numLamp = potNecessaria / potLamp;
+}
+</script>
 </body>
 </html>
