--- a/exercicios-complementares/aula-02/exercicio-06.html
+++ b/exercicios-complementares/aula-02/exercicio-06.html
@@ -3,14 +3,24 @@
 <head>
 <meta charset="utf-8">
 <title>Exercício 06</title>
+<style>
+body {
+  white-space: pre;
+}
+</style>
 </head>
 
 <body>
 <p>
 6. Escreva uma função para calcular e alertar o número de lâmpadas necessárias para iluminar um determinado cômodo de uma residência.
-Dados de entrada: a potência da lâmpada utilizada (em watts), as dimensões (largura e comprimento, em metros) do cômodo.
-Considere que a potência necessária é de 18 watts por metro quadrado.
-As entradas devem ser inputadas via prompt e nãp devem aceitar valores não numéricos.
+
+6.1. Dados de entrada:
+6.1.1 A potência da lâmpada utilizada (em watts)
+6.1.2 As dimensões (largura e comprimento, em metros) do cômodo.
+
+6.2. Considere que a potência necessária é de 18 watts por metro quadrado.
+
+Obs: As entradas devem ser inputadas via prompt e nãp devem aceitar valores não numéricos.
 </p>
 
 <script>
@@ -24,6 +34,7 @@ function calcularQuantLamp(potLamp, largComodo, compComodo) {
   var areaComodo = largComodo * compComodo;
   var potNecessaria = areaComodo * 18;
   numLamp = potNecessaria / potLamp;
+  return numLamp;
 }
 </script>
 </body>
