--- a/exercicios-complementares/aula-02/exercicio-07.html
+++ b/exercicios-complementares/aula-02/exercicio-07.html
@@ -9,5 +9,19 @@
 <p>
 7. Escreva uma função para ler um valor, via prompt, e alertar se é positivo ou negativo. Considere o valor zero como positivo.
 </p>
+
+<script>
+
+var numero = prompt("Digite um numero negativo (-1) ou positivo (1): ");
+var resultado = positivoNegativo(numero);
+alert(resultado);
+
+function positivoNegativo(numero) {
+  if (numero < 0)
+  return ("Negativo");
+else
+  return ("Positivo");
+}
+</script>
 </body>
 </html>
