--- a/exercicios-complementares/aula-02/exercicio-09.html
+++ b/exercicios-complementares/aula-02/exercicio-09.html
@@ -9,5 +9,24 @@
 <p>
 9. Escreva uma função para ler 2 valores, o sistema deve validar e não permitir valores iguais, e então alertar o maior deles.
 </p>
+
+<script>
+var numeroA = prompt("Digite o primeiro número: ");
+var numeroB = prompt("Digite o segundo número: ");
+var resultado = maiorValor(numeroA, numeroB);
+alert(resultado);
+
+function maiorValor(numeroA, numeroB) {
+  if (numeroA > numeroB) {
+      return numeroA;
+  }
+    else if (numeroB > numeroA) {
+        return numeroB;
+    }
+  else {
+    return ("Por favor, apenas números diferentes!");
+  }
+}
+</script>
 </body>
 </html>
