--- a/exercicios-complementares/aula-02/exercicio-10.html
+++ b/exercicios-complementares/aula-02/exercicio-10.html
@@ -9,5 +9,16 @@
 <p>
 10. Escreva uma função que leia 10 valores numéricos, via input, e armazene-os num array.
 </p>
+
+<script>
+function armazenarArray(){
+  var meuArrayBonitao = []
+  for (var i = 1; i <= 10; i++) {
+    meuArrayBonitao.push(prompt("Digite o "+ i +"º numero: "));
+  }
+  alert(meuArrayBonitao);
+}
+armazenarArray();
+</script>
 </body>
 </html>
