Alterações no exercicio 10 + exercicios 11, 13, exercicio 15 em andamento

--- a/exercicios-complementares/aula-02/exercicio-06.html
+++ b/exercicios-complementares/aula-02/exercicio-06.html
@@ -15,8 +15,8 @@ body {
 6. Escreva uma função para calcular e alertar o número de lâmpadas necessárias para iluminar um determinado cômodo de uma residência.
 
 6.1. Dados de entrada:
-6.1.1 A potência da lâmpada utilizada (em watts)
-6.1.2 As dimensões (largura e comprimento, em metros) do cômodo.
+6.1.1. A potência da lâmpada utilizada (em watts)
+6.1.2. As dimensões (largura e comprimento, em metros) do cômodo.
 
 6.2. Considere que a potência necessária é de 18 watts por metro quadrado.
 
