--- a/exercicios-complementares/aula-02/exercicio-10.html
+++ b/exercicios-complementares/aula-02/exercicio-10.html
@@ -11,14 +11,16 @@
 </p>
 
 <script>
-function armazenarArray(){
-  var meuArrayBonitao = []
+meuArrayBonitao = [];
+
+function armazenarArray(meuArrayBonitao) {
   for (var i = 1; i <= 10; i++) {
     meuArrayBonitao.push(prompt("Digite o "+ i +"º numero: "));
   }
-  alert(meuArrayBonitao);
+   alert(meuArrayBonitao);
 }
-armazenarArray();
+armazenarArray(meuArrayBonitao);
+console.log(meuArrayBonitao);
 </script>
 </body>
 </html>
