--- a/exercicios-complementares/aula-02/exercicio-13.html
+++ b/exercicios-complementares/aula-02/exercicio-13.html
@@ -9,5 +9,22 @@
 <p>
 13. Usando o objeto Date, crie um script que apresente a data no formato: dd/mm/aaaa.\
 </p>
+<script>
+var data = new Date();
+
+var dia  = data.getDate();
+if (dia< 10) {
+    dia  = "0" + dia;
+}
+
+var mes  = data.getMonth() + 1;
+if (mes < 10) {
+    mes  = "0" + mes;
+}
+
+var ano  = data.getFullYear();
+dataFormatada = dia + "/" + mes + "/" + ano;
+alert(dataFormatada);
+</script>
 </body>
 </html>
