--- a/exercicios-complementares/aula-02/exercicio-15.html
+++ b/exercicios-complementares/aula-02/exercicio-15.html
@@ -3,17 +3,94 @@
 <head>
 <meta charset="utf-8">
 <title>Exercício 15</title>
+<style>
+body {
+  white-space: pre;
+}
+</style>
 </head>
 
 <body>
 <p>
 15. Escreva um código que atenda os sequintes requisitos:
 
-Possua um objeto cliente, com as propriedades nome, sexo, data de nascimento, e endereço (sendo um objeto com as propriedades cep, logradouro, número, complemento, bairro, cidade, estado). Deve possuir um método que alerte todas as informações do cliente.
+15.1. Possua um objeto cliente, com as propriedades:
 
-Possua um objeto produto com as propriedades titulo, descrição e valor. Deve possuir um método que alerte seu nome e valor.
+15.1.1. Nome
+15.1.2. Sexo
+15.1.3. Data de nascimento
+15.1.4. Endereço (cep, logradouro, número, complemento, bairro, cidade, estado)
+15.1.5. Deve possuir um método que alerte todas as informações do cliente
 
-Possua um objeto venda com as propriedades data, cliente, produtos, desconto e acréscimo. Deve existir um método que receba um objeto cliente e adicione-o a propriedade cliente. Deve ser possível adicionar n produtos, através de um método, que receba um objeto produto e uma quantidade, e adicione-os na propriedade produtos. Deve existir um método que retorne o um objeto com as propriedades valor dos produtos, e valor total, sendo este, a soma dos valores produtos vezes a quantidade, menos o desconto, mais o acréscimo.
+
+15.2. Possua um objeto produto com as propriedades:
+
+15.2.1. Titulo
+15.2.2. Descrição
+15.2.3. Valor
+15.2.4. Deve possuir um método que alerte seu nome e valor
+
+15.3. Possua um objeto venda com as propriedades:
+
+15.3.1. Data
+15.3.2. Cliente
+15.3.3. Produtos
+15.3.4. Desconto
+15.3.5. Acréscimo
+15.3.6. Deve existir um método que receba um objeto cliente e adicione-o a propriedade cliente.
+15.3.7. Deve ser possível adicionar n produtos, através de um método, que receba um objeto produto e uma quantidade,
+e adicione-os na propriedade produtos.
+15.3.8. Deve existir um método que retorne um objeto com as propriedades valor dos produtos, e valor total, sendo este,
+a soma dos valores produtos vezes a quantidade, menos o desconto, mais o acréscimo.
 </p>
+<script>
+var cliente = {
+  nome: "Aline Vieira",
+  sexo: "Feminino",
+  dataNascimento: "11/07/1996",
+  endereco: {
+    logradouro: "Avenida Colombo",
+    numero: "5790",
+    complemento: "Apartamento 221",
+    bairro: "Zona 07",
+    cidade: "Maringa",
+    estado: "Paraná",
+    cep: "87020-900",
+  },
+  mostrarInformacoes: function() {
+    alert("Dados do Cliente:\n" + "\nNome: " + this.nome + "\nSexo: " + this.sexo + "\nData de Nascimento: " + this.dataNascimento + "\nEndereço: " + this.endereco.logradouro + ", "
+    + this.endereco.numero + ", " + this.endereco.complemento + ", " + this.endereco.bairro + ", " + this.endereco.cidade + ", "
+    + this.endereco.estado + ", " + this.endereco.cep);
+  }
+};
+cliente.mostrarInformacoes();
+
+var produto = {
+  titulo: "Garrafa Termica Gatinho",
+  descricao: "Garrafa térmica de aço inoxidável, 220ml, com formato de gatinho, na cor azul",
+  valor: "R$ 28,88",
+  mostrarInformacoes: function() {
+    alert("Produto:\n" + "\nNome: " + this.titulo + "\nValor: " + this.valor);
+  }
+};
+produto.mostrarInformacoes();
+
+var venda = {
+  data: ,
+  cliente: ,
+  produtos: ,
+  desconto: ,
+  acrescimo: ,
+  addcliente: function(cliente) {
+    'add objeto cliente'
+  },
+  addproduto: function(produto, quantidade) {
+    'add objeto produto'
+  },
+  dadosproduto: function() {
+    'retorna o valor dos produtos e o valor total. valor total == (((soma de todos os produtos * qtde) - desconto) + acrescimo)'
+  }
+}
+</script>
 </body>
 </html>
