Adicionando slide, e exercicios 12 e 15 não concluidos

--- a/exercicios-complementares/aula-02/exercicio-12.html
+++ b/exercicios-complementares/aula-02/exercicio-12.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="utf-8">
 <title>Exercício 12</title>
+<style>
+body {
+  white-space: pre;
+}
+</style>
 </head>
 
 <body>
@@ -17,5 +22,18 @@
 
 3 4 7 12 19 28 39 52 67 84
 </p>
+<script>
+/*
+for (var i = 10; i >= 1 ; i--) {
+ alert(i);
+}*/
+
+while (var i = 0; i <= 100 ; i++) {
+  meuArrayBonitao = [];
+  numero = i * i;
+  meuArrayBonitao.push(numero);
+  alert(numero);
+}
+</script>
 </body>
 </html>
