--- a/exercicios-complementares/aula-02/exercicio-11.html
+++ b/exercicios-complementares/aula-02/exercicio-11.html
@@ -10,7 +10,7 @@
 11. Escreva uma função que receba o array do exercício e alerte a quantidade de elementos do array que são números negativos.
 </p>
 <script>
-meuArrayBonitao = [];
+var meuArrayBonitao = [];
 
 function armazenarArray(meuArrayBonitao) {
   for (var i = 1; i <= 10; i++) {
