--- a/exercicios-complementares/aula-02/exercicio-12.html
+++ b/exercicios-complementares/aula-02/exercicio-12.html
@@ -48,6 +48,14 @@ for (var i = 1; i <= 5; i++) {
   }
 alert(TerceiroArray);
 
+
+var quartoArray = [];
+
+for ( i=0; i <10; i++) {
+  quartoArray.push(i*i+3);
+}
+alert(quartoArray);
+
 </script>
 </body>
 </html>
