--- a/exercicios-complementares/aula-02/exercicio-14.html
+++ b/exercicios-complementares/aula-02/exercicio-14.html
@@ -27,5 +27,16 @@ que retorne a soma dos números existentes na propriedade números;
 
 Observação: Não deve ser possível adicionar valores não númericos na propriedade números;
 </p>
+<script>
+var objeto = {
+  numeros: [],
+
+  addNumero: function() {
+    this.numeros.push(1);
+  },
+}
+objeto.addNumero(numeros);
+console.log(objeto);
+</script>
 </body>
 </html>
