--- a/exercicios-complementares/aula-01/site/sobre.html
+++ b/exercicios-complementares/aula-01/site/sobre.html
@@ -51,6 +51,11 @@
   <div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">jquery carousel slider</a> by WOWSlider.com v8.8</div>
   <div class="ws_shadow"></div>
   </div>
+
+  <audio id="player" autoplay loop>
+    <source src="engine1/Ráaa, iée, iée.mp3" type="audio/mpeg" />
+  </audio>
+
   <script type="text/javascript" src="engine1/wowslider.js"></script>
   <script type="text/javascript" src="engine1/script.js"></script>
 </div>
