--- a/exercicios-complementares/aula-01/site/contato.html
+++ b/exercicios-complementares/aula-01/site/contato.html
@@ -40,5 +40,9 @@
 
   </div>
 
+  <audio id="player" autoplay loop>
+    <source src="engine1/Ráaa, iée, iée.mp3" type="audio/mpeg" />
+  </audio>
+
 </body>
 </html>
