--- a/exercicios-complementares/aula-01/site/index.html
+++ b/exercicios-complementares/aula-01/site/index.html
@@ -28,4 +28,9 @@
 <a target="_blank" href="https://br.linkedin.com/in/onalinevieira"><img class="textoLinkedin" src="images/textoLinkedin.png"></a>
 <a target="_blank" href="https://github.com/misaokumura"><img class="textoGithub" src="images/textoGithub.png"></a>
 </div>
-  </html>
+
+<audio id="player" autoplay loop>
+  <source src="engine1/Ráaa, iée, iée.mp3" type="audio/mpeg" />
+</audio>
+</body>
+</html>
