--- a/exercicios-complementares/aula-02/exercicio-15.html
+++ b/exercicios-complementares/aula-02/exercicio-15.html
@@ -16,27 +16,27 @@ body {
 
 15.1. Possua um objeto cliente, com as propriedades:
 
-15.1.1. Nome
-15.1.2. Sexo
-15.1.3. Data de nascimento
-15.1.4. Endereço (cep, logradouro, número, complemento, bairro, cidade, estado)
-15.1.5. Deve possuir um método que alerte todas as informações do cliente
+15.1.1. Nome.
+15.1.2. Sexo.
+15.1.3. Data de nascimento.
+15.1.4. Endereço (cep, logradouro, número, complemento, bairro, cidade, estado).
+15.1.5. Deve possuir um método que alerte todas as informações do cliente.
 
 
 15.2. Possua um objeto produto com as propriedades:
 
-15.2.1. Titulo
-15.2.2. Descrição
-15.2.3. Valor
-15.2.4. Deve possuir um método que alerte seu nome e valor
+15.2.1. Titulo.
+15.2.2. Descrição.
+15.2.3. Valor.
+15.2.4. Deve possuir um método que alerte seu nome e valor.
 
 15.3. Possua um objeto venda com as propriedades:
 
-15.3.1. Data
-15.3.2. Cliente
-15.3.3. Produtos
-15.3.4. Desconto
-15.3.5. Acréscimo
+15.3.1. Data.
+15.3.2. Cliente.
+15.3.3. Produtos.
+15.3.4. Desconto.
+15.3.5. Acréscimo.
 15.3.6. Deve existir um método que receba um objeto cliente e adicione-o a propriedade cliente.
 15.3.7. Deve ser possível adicionar n produtos, através de um método, que receba um objeto produto e uma quantidade,
 e adicione-os na propriedade produtos.
@@ -135,7 +135,6 @@ venda.addProduto(produto1,2);
 venda.addProduto(produto2,4);
 venda.addProduto(produto3,4);
 venda.mostrarInformacoes();
-
 </script>
 </body>
 </html>
