--- a/exercicios-complementares/aula-02/exercicio-10.html
+++ b/exercicios-complementares/aula-02/exercicio-10.html
@@ -11,7 +11,7 @@
 </p>
 
 <script>
-meuArrayBonitao = [];
+var meuArrayBonitao = [];
 
 function armazenarArray(meuArrayBonitao) {
   for (var i = 1; i <= 10; i++) {
